Put comments in index.html on the flow of the program

--- a/index.html
+++ b/index.html
@@ -7,17 +7,15 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>JavaScript Coding Quiz</title>
   </head>
-  <header>
-  <!-- <div class="highscores"></div>
-    <div class="timer-box"></div> -->
-  </header>
+  <header></header>
   <body>
+    <!-- Create a row with 3 columns -->
     <div class="row">
       <div class="column1">
         <a href="#" id="viewhighscores">View Highscores</a>
       </div>
     <div class="column2" id="card">
-    <!-- <div class="card" id="card"> -->
+      <!-- Broke up the main sections of the quiz into 4 parts -->
       <section id="mainpage">
         <h1 id="title">Coding Quiz Challenge</h1>
         <span class="directions" id="instructions">Try to answer the following code-related questions within the time limit.  
